# TrafficIQ-Multi-Modal-GenAI-Agent-System

./: README.md
trafficIQ/: .env.example  .gitignore  README.md  pyproject.toml
trafficIQ/app/: __init__.py
trafficIQ/app/agent/: __init__.py  policy.py  prompts.py  router.py
trafficIQ/app/api/: __init__.py  main.py  routes.py
trafficIQ/app/common/: __init__.py  config.py  logging.py  schemas.py  utils.py
trafficIQ/app/tools/: __init__.py  bolo_client.py  case_client.py  evidence.py  ocr_client.py  vertex_client.py
trafficIQ/architecture/: system_design.mmd
trafficIQ/eval/: __init__.py  dataset_schema.md  evaluate.py  metrics.py
trafficIQ/infra/: Dockerfile.agent  Dockerfile.api  cloudrun_deploy.md  terraform_stub.md
trafficIQ/tests/: __init__.py  test_api.py  test_router.py  test_tools.py
